--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --coverage"
   },
+  "jest": {
+  "collectCoverage": true,
+  "coverageReporters": ["lcov", "text"]
+},
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "daisyui": "^5.0.43",
@@ -27,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "jest":"^30.0.5"
   }
 }
